<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Builder" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"/>
    
    <EditText
        android:id="@+id/EditText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@string/hello_world"
        android:layout_marginTop="45dp"
        android:gravity="top|left"
        android:height="200dp"
        android:inputType="textMultiLine"
        android:lines="5"
        android:scrollHorizontally="false"
        android:width="280dp" />

	<Button
	    android:id="@+id/button1"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:minHeight="68dp"
	    android:minWidth="468dp"
	    android:text="@string/Run" />

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/button1"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="48dp"
	        android:text="@string/co" />
	
</RelativeLayout>